After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771961 - Handle Sony's ARW, and don't let RAW files be detected as TIFFs
Handle Sony's ARW, and don't let RAW files be detected as TIFFs
Status: RESOLVED FIXED
Product: GEGL
Classification: Other
Component: operations
git master
Other All
: Normal normal
: ---
Assigned To: Default Gegl Component Owner
Default Gegl Component Owner
Depends on:
Blocks:
 
 
Reported: 2016-09-25 21:53 UTC by Richard B. Kreckel
Modified: 2017-02-04 17:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
operations/external/raw-load: Handle Sony's ARW files (924 bytes, patch)
2017-02-03 01:57 UTC, Debarshi Ray
committed Details | Review
operations/core/load: Detect local ARWs and CR2s as RAW, not TIFF (4.16 KB, patch)
2017-02-03 01:57 UTC, Debarshi Ray
committed Details | Review
operations/core/load: Be more careful about NULL values (1.44 KB, patch)
2017-02-03 02:10 UTC, Debarshi Ray
committed Details | Review

Description Richard B. Kreckel 2016-09-25 21:53:44 UTC
Gnome Photos crashes at each ARW file it encounters.
I've uploaded one to http://in.terlu.de/~kreckel/_DSC5723.ARW (since it exceeds the file size limit for uploads).
Comment 1 Debarshi Ray 2016-09-27 09:43:51 UTC
Thanks for the test image. This is something that we need to fix in GEGL's image loaders.
Comment 2 Phil Reilly 2016-10-01 22:06:39 UTC
This version crashes on launch for me on a macbook running Apricity linux. Core dump is produced...let me know if you want it.
Comment 3 Phil Reilly 2016-10-01 22:45:37 UTC
Launching from terminal produces:

illegal hardware instruction (core dumped) gnome-photos
Comment 4 Debarshi Ray 2016-10-02 10:32:06 UTC
(In reply to Phil Reilly from comment #2)
> This version crashes on launch for me on a macbook running Apricity linux.
> Core dump is produced...let me know if you want it.

(In reply to Phil Reilly from comment #3)
> Launching from terminal produces:
> 
> illegal hardware instruction (core dumped) gnome-photos

That's something else. I think it is a bug 771995. Could you please test the patches and leave a comment on that bug?
Comment 5 Phil Reilly 2016-10-02 17:28:34 UTC
Is there a build package to download or do I have to build one?
Comment 6 Debarshi Ray 2017-02-03 01:07:45 UTC
There are two things here.

First, we need to add the MIME type and extension of Sony's ARW files to GEGL's RAW loader.

Second, the content type guessing implemented in commit 442f6832701c4fba slightly changes the GEGL loader selection in a way such that some RAW images are detected as TIFFs. For example Sony ARWs and Canon CR2s.
Comment 7 Debarshi Ray 2017-02-03 01:57:17 UTC
Created attachment 344816 [details] [review]
operations/external/raw-load: Handle Sony's ARW files
Comment 8 Debarshi Ray 2017-02-03 01:57:37 UTC
Created attachment 344817 [details] [review]
operations/core/load: Detect local ARWs and CR2s as RAW, not TIFF
Comment 9 Debarshi Ray 2017-02-03 02:10:41 UTC
Created attachment 344818 [details] [review]
operations/core/load: Be more careful about NULL values
Comment 10 Debarshi Ray 2017-02-04 17:13:05 UTC
Pushed to master after pippin's blessing at WilberWeek.