operations/external/raw-load: Handle Sony's ARW files

https://bugzilla.gnome.org/show_bug.cgi?id=771961